# NixWall

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  flake.nix
.github/workflows/: release-iso.yml  release.yml
api/: Cargo.toml  pyproject.toml
api/nixwall_api/: main.py
api/src/: main.rs
assets/logo/: nixwall-ascii.txt
demo/: client.nix  demo.sh
docs/: testing.md
installer/: disko.nix  iso.nix
installer/modules/: greeter.nix  service-flake-copy.nix
installer/nixos/: config.json  configuration.nix  disko.nix  flake.nix
installer/scripts/: default.nix  nixwall-install
modules/: api.nix  boot.nix  certs.nix  dashboard.nix  dhcp.nix  dns.nix  firewall-rules.nix  git.nix  locale.nix  nat.nix  network.nix  nixwall-options.nix  nixwall.nix  pam.nix  seed-config.nix  ssh.nix  users.nix
modules/appliance/: api.nix  boot.nix  certs.nix  dashboard.nix  git.nix  locale.nix  packages.nix  pam.nix  seed-config.nix
modules/core/: dhcp.nix  dns.nix  firewall-rules.nix  network.nix  nixwall-options.nix  ssh.nix  users.nix
pkgs/: nixwall-api.nix
profiles/: default.nix
tests/configs/: api.json  dns-server.json  dns-upstream.json  minimal-dhcp.json  minimal.json
tests/helpers/: dns.nix  ssh.nix  web-server.nix
tests/modules/: dns.nix  web-server.nix
tests/test-scripts/: api.nix  build.nix  certs.nix  dashboard.nix  dhcp.nix  dns-server.nix  dns-setting.nix  firewall-rules.nix  json-parsing.nix  nat.nix  network.nix  seed-config.nix  ssh.nix  users.nix
tests/virtual-machines/: client.nix  dns.nix  heavy-firewall-vm.nix  (+4 more)
(+30 files in other folders)
