[package]
name = "nixwall-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nixwall-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pam = "0.8"
base64 = "0.22"
axum-extra = { version = "0.10", features = ["typed-header"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
headers = "0.4"
tower = { version = "0.5", features = ["util"] }
